--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         applicationId "org.landoria.mac.playpaddy"
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -34,4 +34,5 @@ dependencies {
     implementation files('libs/ksoap2-android-assembly-3.0.0-jar-with-dependencies.jar')
     implementation 'co.paystack.android:paystack:3.0.10'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.0'
+    implementation 'com.google.android.gms:play-services-ads:19.1.0'
 }
